--- a/tools_proj/XCPP/GameCore/GameCore.vcxproj.filters
+++ b/tools_proj/XCPP/GameCore/GameCore.vcxproj.filters
@@ -468,6 +468,9 @@
     <ClInclude Include="XLevelTask.h">
       <Filter>spawn</Filter>
     </ClInclude>
+    <ClInclude Include="XLevelStatistics.h">
+      <Filter>spawn</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ai">
