--- a/tools_proj/XCPP/GameCore/GameCore.vcxproj
+++ b/tools_proj/XCPP/GameCore/GameCore.vcxproj
@@ -54,24 +54,24 @@
     <ClCompile Include="runtime\AIRuntimeXAIActionSkill.cpp" />
     <ClCompile Include="SceneList.cpp" />
     <ClCompile Include="GameTime.cpp" />
-    <ClCompile Include="SkillReader.cpp" />
+    <ClCompile Include="skill\SkillReader.cpp" />
+    <ClCompile Include="skill\XArtsSkill.cpp" />
+    <ClCompile Include="skill\XBullet.cpp" />
+    <ClCompile Include="skill\XBulletCore.cpp" />
+    <ClCompile Include="skill\XJAComboSkill.cpp" />
+    <ClCompile Include="skill\XSkill.cpp" />
+    <ClCompile Include="skill\XSkillCore.cpp" />
+    <ClCompile Include="skill\XSkillMgr.cpp" />
+    <ClCompile Include="spawn\XLevelScriptMgr.cpp" />
+    <ClCompile Include="spawn\XLevelSpawn.cpp" />
+    <ClCompile Include="spawn\XLevelSpawnMgr.cpp" />
+    <ClCompile Include="spawn\XLevelTask.cpp" />
+    <ClCompile Include="spawn\XLevelWave.cpp" />
+    <ClCompile Include="spawn\XScene.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="Transform.cpp" />
-    <ClCompile Include="XArtsSkill.cpp" />
     <ClCompile Include="XAttributes.cpp" />
-    <ClCompile Include="XBullet.cpp" />
-    <ClCompile Include="XBulletCore.cpp" />
-    <ClCompile Include="XJAComboSkill.cpp" />
-    <ClCompile Include="XLevelScriptMgr.cpp" />
-    <ClCompile Include="XLevelSpawn.cpp" />
-    <ClCompile Include="XLevelSpawnMgr.cpp" />
-    <ClCompile Include="XLevelTask.cpp" />
-    <ClCompile Include="XLevelWave.cpp" />
-    <ClCompile Include="XScene.cpp" />
-    <ClCompile Include="XSkill.cpp" />
-    <ClCompile Include="XSkillCore.cpp" />
-    <ClCompile Include="XSkillMgr.cpp" />
     <ClCompile Include="XStateMachine.cpp" />
     <ClCompile Include="XTimerMgr.cpp" />
     <ClCompile Include="XAIComponent.cpp" />
@@ -110,8 +110,6 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameObjectMgr.h" />
     <ClInclude Include="IXStateTransform.h" />
-    <ClInclude Include="LevelCmd.h" />
-    <ClInclude Include="LevelSpawnType.h" />
     <ClInclude Include="Log.h" />
     <ClInclude Include="NativeInterface.h" />
     <ClInclude Include="NativeReader.h" />
@@ -136,28 +134,30 @@
     <ClInclude Include="SceneList.h" />
     <ClInclude Include="GameTime.h" />
     <ClInclude Include="Singleton.h" />
-    <ClInclude Include="SkillReader.h" />
+    <ClInclude Include="skill\SkillReader.h" />
+    <ClInclude Include="skill\XArtsSkill.h" />
+    <ClInclude Include="skill\XBullet.h" />
+    <ClInclude Include="skill\XBulletCore.h" />
+    <ClInclude Include="skill\XJAComboSkill.h" />
+    <ClInclude Include="skill\XSkill.h" />
+    <ClInclude Include="skill\XSkillCore.h" />
+    <ClInclude Include="skill\XSkillMgr.h" />
+    <ClInclude Include="spawn\LevelCmd.h" />
+    <ClInclude Include="spawn\LevelSpawnType.h" />
+    <ClInclude Include="spawn\XLevelScriptMgr.h" />
+    <ClInclude Include="spawn\XLevelSpawn.h" />
+    <ClInclude Include="spawn\XLevelSpawnMgr.h" />
+    <ClInclude Include="spawn\XLevelStatistics.h" />
+    <ClInclude Include="spawn\XLevelTask.h" />
+    <ClInclude Include="spawn\XLevelWave.h" />
+    <ClInclude Include="spawn\XScene.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="Transform.h" />
-    <ClInclude Include="XArtsSkill.h" />
     <ClInclude Include="XAttributeDefine.h" />
     <ClInclude Include="XAttributes.h" />
-    <ClInclude Include="XBullet.h" />
-    <ClInclude Include="XBulletCore.h" />
     <ClInclude Include="XComponentDef.h" />
     <ClInclude Include="XDelegate.h" />
-    <ClInclude Include="XJAComboSkill.h" />
-    <ClInclude Include="XLevelScriptMgr.h" />
-    <ClInclude Include="XLevelSpawn.h" />
-    <ClInclude Include="XLevelSpawnMgr.h" />
-    <ClInclude Include="XLevelStatistics.h" />
-    <ClInclude Include="XLevelTask.h" />
-    <ClInclude Include="XLevelWave.h" />
-    <ClInclude Include="XScene.h" />
-    <ClInclude Include="XSkill.h" />
-    <ClInclude Include="XSkillCore.h" />
-    <ClInclude Include="XSkillMgr.h" />
     <ClInclude Include="XStateDefine.h" />
     <ClInclude Include="XStateMachine.h" />
     <ClInclude Include="XTimerMgr.h" />
