--- a/tools_proj/XCPP/GameCore/GameCore.vcxproj.filters
+++ b/tools_proj/XCPP/GameCore/GameCore.vcxproj.filters
@@ -103,30 +103,6 @@
     <ClCompile Include="tinyxml2.cpp">
       <Filter>plugin</Filter>
     </ClCompile>
-    <ClCompile Include="SkillReader.cpp">
-      <Filter>skill</Filter>
-    </ClCompile>
-    <ClCompile Include="XSkill.cpp">
-      <Filter>skill</Filter>
-    </ClCompile>
-    <ClCompile Include="XSkillCore.cpp">
-      <Filter>skill</Filter>
-    </ClCompile>
-    <ClCompile Include="XSkillMgr.cpp">
-      <Filter>skill</Filter>
-    </ClCompile>
-    <ClCompile Include="XArtsSkill.cpp">
-      <Filter>skill</Filter>
-    </ClCompile>
-    <ClCompile Include="XBullet.cpp">
-      <Filter>skill</Filter>
-    </ClCompile>
-    <ClCompile Include="XBulletCore.cpp">
-      <Filter>skill</Filter>
-    </ClCompile>
-    <ClCompile Include="XJAComboSkill.cpp">
-      <Filter>skill</Filter>
-    </ClCompile>
     <ClCompile Include="XStateMachine.cpp">
       <Filter>state</Filter>
     </ClCompile>
@@ -178,24 +154,6 @@
     <ClCompile Include="GameObjectMgr.cpp">
       <Filter>unity</Filter>
     </ClCompile>
-    <ClCompile Include="XLevelSpawnMgr.cpp">
-      <Filter>spawn</Filter>
-    </ClCompile>
-    <ClCompile Include="XLevelWave.cpp">
-      <Filter>spawn</Filter>
-    </ClCompile>
-    <ClCompile Include="XScene.cpp">
-      <Filter>spawn</Filter>
-    </ClCompile>
-    <ClCompile Include="XLevelScriptMgr.cpp">
-      <Filter>spawn</Filter>
-    </ClCompile>
-    <ClCompile Include="XLevelTask.cpp">
-      <Filter>spawn</Filter>
-    </ClCompile>
-    <ClCompile Include="XLevelSpawn.cpp">
-      <Filter>spawn</Filter>
-    </ClCompile>
     <ClCompile Include="ai\AITree.cpp">
       <Filter>ai</Filter>
     </ClCompile>
@@ -213,6 +171,48 @@
     </ClCompile>
     <ClCompile Include="ai\AIFactory.cpp">
       <Filter>ai</Filter>
+    </ClCompile>
+    <ClCompile Include="spawn\XLevelSpawn.cpp">
+      <Filter>spawn</Filter>
+    </ClCompile>
+    <ClCompile Include="spawn\XLevelSpawnMgr.cpp">
+      <Filter>spawn</Filter>
+    </ClCompile>
+    <ClCompile Include="spawn\XLevelTask.cpp">
+      <Filter>spawn</Filter>
+    </ClCompile>
+    <ClCompile Include="spawn\XLevelWave.cpp">
+      <Filter>spawn</Filter>
+    </ClCompile>
+    <ClCompile Include="spawn\XScene.cpp">
+      <Filter>spawn</Filter>
+    </ClCompile>
+    <ClCompile Include="spawn\XLevelScriptMgr.cpp">
+      <Filter>spawn</Filter>
+    </ClCompile>
+    <ClCompile Include="skill\XBullet.cpp">
+      <Filter>skill</Filter>
+    </ClCompile>
+    <ClCompile Include="skill\XBulletCore.cpp">
+      <Filter>skill</Filter>
+    </ClCompile>
+    <ClCompile Include="skill\XSkill.cpp">
+      <Filter>skill</Filter>
+    </ClCompile>
+    <ClCompile Include="skill\XSkillCore.cpp">
+      <Filter>skill</Filter>
+    </ClCompile>
+    <ClCompile Include="skill\XSkillMgr.cpp">
+      <Filter>skill</Filter>
+    </ClCompile>
+    <ClCompile Include="skill\XJAComboSkill.cpp">
+      <Filter>skill</Filter>
+    </ClCompile>
+    <ClCompile Include="skill\SkillReader.cpp">
+      <Filter>skill</Filter>
+    </ClCompile>
+    <ClCompile Include="skill\XArtsSkill.cpp">
+      <Filter>skill</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -342,30 +342,6 @@
     <ClInclude Include="XEventArgs.h">
       <Filter>common\event</Filter>
     </ClInclude>
-    <ClInclude Include="SkillReader.h">
-      <Filter>skill</Filter>
-    </ClInclude>
-    <ClInclude Include="XSkill.h">
-      <Filter>skill</Filter>
-    </ClInclude>
-    <ClInclude Include="XSkillCore.h">
-      <Filter>skill</Filter>
-    </ClInclude>
-    <ClInclude Include="XSkillMgr.h">
-      <Filter>skill</Filter>
-    </ClInclude>
-    <ClInclude Include="XArtsSkill.h">
-      <Filter>skill</Filter>
-    </ClInclude>
-    <ClInclude Include="XBullet.h">
-      <Filter>skill</Filter>
-    </ClInclude>
-    <ClInclude Include="XJAComboSkill.h">
-      <Filter>skill</Filter>
-    </ClInclude>
-    <ClInclude Include="XBulletCore.h">
-      <Filter>skill</Filter>
-    </ClInclude>
     <ClInclude Include="XStateMachine.h">
       <Filter>state</Filter>
     </ClInclude>
@@ -426,33 +402,6 @@
     <ClInclude Include="GameObjectMgr.h">
       <Filter>unity</Filter>
     </ClInclude>
-    <ClInclude Include="XLevelSpawnMgr.h">
-      <Filter>spawn</Filter>
-    </ClInclude>
-    <ClInclude Include="XLevelWave.h">
-      <Filter>spawn</Filter>
-    </ClInclude>
-    <ClInclude Include="XScene.h">
-      <Filter>spawn</Filter>
-    </ClInclude>
-    <ClInclude Include="XLevelScriptMgr.h">
-      <Filter>spawn</Filter>
-    </ClInclude>
-    <ClInclude Include="LevelCmd.h">
-      <Filter>spawn</Filter>
-    </ClInclude>
-    <ClInclude Include="LevelSpawnType.h">
-      <Filter>spawn</Filter>
-    </ClInclude>
-    <ClInclude Include="XLevelTask.h">
-      <Filter>spawn</Filter>
-    </ClInclude>
-    <ClInclude Include="XLevelStatistics.h">
-      <Filter>spawn</Filter>
-    </ClInclude>
-    <ClInclude Include="XLevelSpawn.h">
-      <Filter>spawn</Filter>
-    </ClInclude>
     <ClInclude Include="ai\AIFactory.h">
       <Filter>ai</Filter>
     </ClInclude>
@@ -473,6 +422,57 @@
     </ClInclude>
     <ClInclude Include="ai\AIBehaviour.h">
       <Filter>ai</Filter>
+    </ClInclude>
+    <ClInclude Include="spawn\XLevelSpawn.h">
+      <Filter>spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="spawn\XLevelSpawnMgr.h">
+      <Filter>spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="spawn\XLevelStatistics.h">
+      <Filter>spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="spawn\XLevelTask.h">
+      <Filter>spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="spawn\XLevelWave.h">
+      <Filter>spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="spawn\XScene.h">
+      <Filter>spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="spawn\LevelCmd.h">
+      <Filter>spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="spawn\LevelSpawnType.h">
+      <Filter>spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="spawn\XLevelScriptMgr.h">
+      <Filter>spawn</Filter>
+    </ClInclude>
+    <ClInclude Include="skill\XBullet.h">
+      <Filter>skill</Filter>
+    </ClInclude>
+    <ClInclude Include="skill\XBulletCore.h">
+      <Filter>skill</Filter>
+    </ClInclude>
+    <ClInclude Include="skill\XSkill.h">
+      <Filter>skill</Filter>
+    </ClInclude>
+    <ClInclude Include="skill\XSkillCore.h">
+      <Filter>skill</Filter>
+    </ClInclude>
+    <ClInclude Include="skill\XSkillMgr.h">
+      <Filter>skill</Filter>
+    </ClInclude>
+    <ClInclude Include="skill\XJAComboSkill.h">
+      <Filter>skill</Filter>
+    </ClInclude>
+    <ClInclude Include="skill\SkillReader.h">
+      <Filter>skill</Filter>
+    </ClInclude>
+    <ClInclude Include="skill\XArtsSkill.h">
+      <Filter>skill</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
