--- a/tools_proj/XCPP/GameCore/GameCore.vcxproj
+++ b/tools_proj/XCPP/GameCore/GameCore.vcxproj
@@ -36,7 +36,8 @@
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="NativeInterface.cpp" />
     <ClCompile Include="NativeReader.cpp" />
-    <ClCompile Include="patch.c" />
+    <ClCompile Include="plugin\patch.c" />
+    <ClCompile Include="plugin\tinyxml2.cpp" />
     <ClCompile Include="QteStatusList.cpp" />
     <ClCompile Include="runtime\AIRuntimeDoSelectNearest.cpp" />
     <ClCompile Include="runtime\AIRuntimeFindTargetByDistance.cpp" />
@@ -69,7 +70,6 @@
     <ClCompile Include="spawn\XLevelWave.cpp" />
     <ClCompile Include="spawn\XScene.cpp" />
     <ClCompile Include="Timer.cpp" />
-    <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="XAttributes.cpp" />
     <ClCompile Include="XStateMachine.cpp" />
@@ -113,9 +113,10 @@
     <ClInclude Include="Log.h" />
     <ClInclude Include="NativeInterface.h" />
     <ClInclude Include="NativeReader.h" />
-    <ClInclude Include="patch.h" />
-    <ClInclude Include="patch_types.h" />
-    <ClInclude Include="picojson.h" />
+    <ClInclude Include="plugin\patch.h" />
+    <ClInclude Include="plugin\patch_types.h" />
+    <ClInclude Include="plugin\picojson.h" />
+    <ClInclude Include="plugin\tinyxml2.h" />
     <ClInclude Include="QteStatusList.h" />
     <ClInclude Include="runtime\AIRuntimeDoSelectNearest.h" />
     <ClInclude Include="runtime\AIRuntimeFindTargetByDistance.h" />
@@ -152,7 +153,6 @@
     <ClInclude Include="spawn\XLevelWave.h" />
     <ClInclude Include="spawn\XScene.h" />
     <ClInclude Include="Timer.h" />
-    <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="XAttributeDefine.h" />
     <ClInclude Include="XAttributes.h" />
