--- a/tools_proj/XCPP/GameCore/GameCore.vcxproj
+++ b/tools_proj/XCPP/GameCore/GameCore.vcxproj
@@ -69,6 +69,7 @@
     <ClCompile Include="XLevelTask.cpp" />
     <ClCompile Include="XLevelWave.cpp" />
     <ClCompile Include="XMonster.cpp" />
+    <ClCompile Include="XNpc.cpp" />
     <ClCompile Include="XScene.cpp" />
     <ClCompile Include="XSkill.cpp" />
     <ClCompile Include="XSkillCore.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="XLevelTask.h" />
     <ClInclude Include="XLevelWave.h" />
     <ClInclude Include="XMonster.h" />
+    <ClInclude Include="XNpc.h" />
     <ClInclude Include="XScene.h" />
     <ClInclude Include="XSkill.h" />
     <ClInclude Include="XSkillCore.h" />
